--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-prettier": "^4.0.1",
+    "google-closure-compiler-java": "^20200719.0.0",
     "babel-eslint": "^10.0.3",
     "cypress": "^4.5.0",
     "cypress-failed-log": "^2.5.1",
