--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-vue": "^1.1.0",
     "chart.js": "^2.9.3",
     "debounce": "^1.2.0",
+    "google-closure-compiler-java": "^20200719.0.0",
     "tinymce": "^4.9.11",
     "v-tooltip": "^2.0.2",
     "vue": "^2.6.11",
