--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+env:
+  global:
+  # Used for saving generated test datasets. See Notion for details.
+  - secure: fRBfUOCW74WoTqn++xJLCL6k0Ug4f8LSD75mbrfMWdP9Wuu5WzTpFH2K0fNOK2Znfg0Vqpr1442Sjjo+C4PxiM65RPIoi36CfFEqEPdhN2EF5kSXEngj97LF3SQzCklDxf/pI9Z9cbr5QgJhiVexLXuBg2Dsru/UvBD871+p4kA=
+  - APPLICATION=omp
+
 # Configure the build matrix
 matrix:
   include:
@@ -9,14 +15,18 @@ matrix:
     php: 7.3
   - env: TEST=pgsql
     php: 7.4
-  - env: TEST=pgsql
+  - env:
+    - TEST: pgsql
+    - SAVE_BUILD: true
     php: 8.0
   # MySQL / various PHP
   - env: TEST=mysql
     php: 7.3
   - env: TEST=mysql
     php: 7.4
-  - env: TEST=mysql
+  - env:
+    - TEST: mysql
+    - SAVE_BUILD: true
     php: 8.0
   # Path info disabled (DISABLED pending a fix of pkp/pkp-lib#4414)
   # - env: TEST=mysql DISABLE_PATH_INFO=1
