--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,11 @@ jobs:
     - stage: test
       env: TEST=pgsql SAVE_BUILD=true
       php: 8.0
-    - env: TEST=pgsql SAVE_BUILD=true
+    - env: TEST=pgsql
       php: 8.1.0
     - env: TEST=mysql SAVE_BUILD=true
       php: 8.0
-    - env: TEST=mysql SAVE_BUILD=true
+    - env: TEST=mysql
       php: 8.1.0
     # Path info disabled DISABLED pending a fix of pkp/pkp-lib#4414
     # - PHPVERSION=7.4 TEST=mysql DISABLE_PATH_INFO=1
