--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ cache:
 addons:
   chrome: beta
   postgresql: "9.5"
+  mariadb: "10.3"
   apt:
     update: true
     packages:
@@ -46,9 +47,9 @@ jobs:
       php: 8.0
     - env: TEST=pgsql
       php: 8.1.0
-    - env: TEST=mysql SAVE_BUILD=true
+    - env: TEST=mariadb SAVE_BUILD=true
       php: 8.0
-    - env: TEST=mysql
+    - env: TEST=mysql SAVE_BUILD=true
       php: 8.1.0
     # Path info disabled DISABLED pending a fix of pkp/pkp-lib#4414
     # - PHPVERSION=7.4 TEST=mysql DISABLE_PATH_INFO=1
