--- a/.travis.yml
+++ b/.travis.yml
@@ -46,9 +46,12 @@ jobs:
       php: 8.0
     - env: TEST=pgsql
       php: 8.1.0
-    - env: TEST=mysql SAVE_BUILD=true
+    - env: TEST=mariadb SAVE_BUILD=true
       php: 8.0
-    - env: TEST=mysql
+      after_script:
+      - sudo service mariadb stop
+      - sudo apt-get remove --purge mariadb-server mariadb-client mariadb-common
+    - env: TEST=mysql SAVE_BUILD=true
       php: 8.1.0
     # Path info disabled DISABLED pending a fix of pkp/pkp-lib#4414
     # - PHPVERSION=7.4 TEST=mysql DISABLE_PATH_INFO=1
