--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "plugins/generic/acron"]
 	path = plugins/generic/acron
 	url = https://github.com/pkp/acron
+[submodule "plugins/generic/citationStyleLanguage"]
+	path = plugins/generic/citationStyleLanguage
+	url = https://github.com/pkp/citationStyleLanguage
